--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -33,8 +33,10 @@
 
 - name: Ensure freescout container network is created
   community.general.docker_network:
+    enable_ipv6: "{{ devture_systemd_docker_base_ipv6_enabled }}"
     name: "{{ freescout_container_network }}"
     driver: bridge
+    driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
 
 - name: Ensure freescout systemd service is present
   ansible.builtin.template:
