--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,8 @@
-# SPDX-FileCopyrightText: 2024 Nikita Chernyi
+# SPDX-FileCopyrightText: 2023 - 2024 Nikita Chernyi
+# SPDX-FileCopyrightText: 2023 - 2025 Slavi Pantaleev
+# SPDX-FileCopyrightText: 2024 Sergio Durigan Junior
+# SPDX-FileCopyrightText: 2025 MASH project contributors
+# SPDX-FileCopyrightText: 2025 Suguru Hirahara
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
@@ -26,8 +30,10 @@ freescout_scheme: https
 freescout_path_prefix: /
 
 freescout_container_image: "{{ freescout_container_image_registry_prefix }}tiredofit/freescout:{{ freescout_container_image_tag }}"
-freescout_container_image_registry_prefix: docker.io/
 freescout_container_image_tag: "php8.3-{{ freescout_version }}"
+freescout_container_image_registry_prefix: "{{ freescout_container_image_registry_prefix_upstream }}"
+freescout_container_image_registry_prefix_upstream: "{{ freescout_container_image_registry_prefix_upstream_default }}"
+freescout_container_image_registry_prefix_upstream_default: docker.io/
 freescout_container_image_force_pull: "{{ freescout_container_image.endswith(':latest') }}"
 
 # The base container network. It will be auto-created by this role if it doesn't exist already.
