--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,7 +42,9 @@ freescout_container_network: "{{ freescout_identifier }}"
 # A list of additional container networks that the container would be connected to.
 # The role does not create these networks, so make sure they already exist.
 # Use this to expose this container to another reverse proxy, which runs in a different container network.
-freescout_container_additional_networks: []
+freescout_container_additional_networks: "{{ freescout_container_additional_networks_auto + freescout_container_additional_networks_custom }}"
+freescout_container_additional_networks_auto: []
+freescout_container_additional_networks_custom: []
 
 # freescout_container_labels_traefik_enabled controls whether labels to assist a Traefik reverse-proxy will be attached to the container.
 # See `../templates/labels.j2` for details.
