--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,6 +46,13 @@ freescout_container_additional_networks: "{{ freescout_container_additional_netw
 freescout_container_additional_networks_auto: []
 freescout_container_additional_networks_custom: []
 
+# A list of additional "volumes" to mount in the container.
+# This list gets populated dynamically at runtime. You can provide a different default value,
+# if you wish to mount your own files into the container.
+# Contains definition objects like this: `{"type": "bind", "src": "/outside", "dst": "/inside", "options": "readonly"}.
+# See the `--mount` documentation for the `docker run` command.
+freescout_container_additional_volumes: []
+
 # freescout_container_labels_traefik_enabled controls whether labels to assist a Traefik reverse-proxy will be attached to the container.
 # See `../templates/labels.j2` for details.
 #
