--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -147,6 +147,9 @@ freescout_systemd_required_services_list_default: "{{ [devture_systemd_docker_ba
 freescout_systemd_required_services_list_auto: []
 freescout_systemd_required_services_list_custom: []
 
+# List of systemd services that the FreeScout systemd service wants
+freescout_systemd_wanted_services_list: []
+
 # Admin credentials to be created on startup.
 freescout_admin_email: ''
 freescout_admin_password: ''
