another attempt to fix renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,13 @@
   "labels": [
     "dependencies"
   ],
+  "packageRules": [
+    {
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["tiredofit/freescout"],
+      "versioning": "regex:^php8\\.3-(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$"
+    }
+  ],
   "customManagers": [
     {
       "customType": "regex",
@@ -14,8 +21,7 @@
       ],
       "matchStrings": [
         "# renovate: datasource=(?<datasource>[a-z-.]+?) depName=(?<depName>[^\\s]+?)(?: (?:lookupName|packageName)=(?<packageName>[^\\s]+?))?(?: versioning=(?<versioning>[a-z-0-9]+?))?\\s+[A-Za-z0-9_]+?(?:_version|_tag)\\s*:\\s*[\"']?(?<currentValue>.+?)[\"']?(?:\\s|$)"
-      ],
-      "extractVersionTemplate": "php\\d+\\.\\d+-(\\d+\\.\\d+\\.\\d+)"
+      ]
     }
   ]
 }
