--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -41,6 +41,7 @@ jobs:
               VERSION=$(echo "$subject" | sed -E 's/.*[Dd]ocker tag to (.+)$/\1/')
               # Special hack for this specific role repository
               VERSION=$(echo "$VERSION" | sed -E 's/^php[0-9]+(\.[0-9]+)?-//')
+              VERSION="v${VERSION#v}"
               echo "new_version=$VERSION" >> $GITHUB_OUTPUT
               echo "commit_hash=$commit" >> $GITHUB_OUTPUT
               echo "Found Renovate commit: $commit with version: $VERSION"
