Enable pre-commit
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-convertx/commit/f138330ec60c81f2e61156f72d21d20e9d040c14.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -3,12 +3,11 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
-
 - name: Ensure FreeScout paths exist
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
-    mode: 0750
+    mode: "0750"
   with_items:
     - "{{ freescout_base_path }}"
     - "{{ freescout_data_path }}"
@@ -19,7 +18,7 @@
   ansible.builtin.template:
     src: "{{ role_path }}/templates/{{ item }}.j2"
     dest: "{{ freescout_base_path }}/{{ item }}"
-    mode: 0640
+    mode: "0640"
   with_items:
     - env
     - labels
@@ -46,4 +45,4 @@
   ansible.builtin.template:
     src: "{{ role_path }}/templates/systemd/freescout.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ freescout_identifier }}.service"
-    mode: 0644
+    mode: "0644"
