--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -3,13 +3,13 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
-
 - name: Check existence of FreeScout systemd service
   ansible.builtin.stat:
     path: "{{ devture_systemd_docker_base_systemd_path }}/{{ freescout_identifier }}.service"
   register: freescout_service_stat
 
-- when: freescout_service_stat.stat.exists | bool
+- name: Uninstall FreeScout systemd services and files
+  when: freescout_service_stat.stat.exists | bool
   block:
     - name: Ensure FreeScout systemd service is stopped
       ansible.builtin.service:
