--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -3,7 +3,6 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
-
 - name: Fail if required FreeScout settings not defined
   ansible.builtin.fail:
     msg: >
@@ -19,7 +18,8 @@
     - freescout_database_hostname
     - freescout_database_password
 
-- when: freescout_container_labels_traefik_enabled | bool
+- name: Run if Traefik is enabled
+  when: freescout_container_labels_traefik_enabled | bool
   block:
     - name: Fail if required FreeScout Traefik settings not defined
       ansible.builtin.fail:
