Update renovate.json: enable automerge for some repos on pre-commit
pre-commit is a optional linter and its dependency update is merged anyway, so it is sensible to enable automerge for reviewers' sanity.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,6 +12,15 @@
       "matchDatasources": ["docker"],
       "matchPackageNames": ["tiredofit/freescout"],
       "versioning": "regex:^php8\\.3-(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$"
+    },
+    {
+      "matchPackageNames": [
+        "/ansible-lint/",
+        "/pre-commit-hooks/"
+      ],
+      "enabled": true,
+      "automerge": true,
+      "automergeType": "pr"
     }
   ],
   "customManagers": [
