--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -20,7 +20,7 @@
       ],
       "enabled": true,
       "automerge": true,
-      "automergeType": "pr"
+      "automergeType": "branch"
     }
   ],
   "customManagers": [
