Update renovate.json: replace 'matchPackageNames' with 'matchFileNames'
As automerge is found to work as expected it should be sensible to have it cover all of the repos on .pre-commit-config.yaml. Note that Renovate will raise a PR for us to review if tests fail. See: https://docs.renovatebot.com/key-concepts/automerge/#branch-vs-pr-automerging

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,10 +14,7 @@
       "versioning": "regex:^php8\\.3-(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$"
     },
     {
-      "matchPackageNames": [
-        "/ansible-lint/",
-        "/pre-commit-hooks/"
-      ],
+      "matchFileNames": [".pre-commit-config.yaml"],
       "enabled": true,
       "automerge": true,
       "automergeType": "branch"
