Update renovate.json: set 'schedule' for pre-commit's repos
Since running pre-commit is optional and does not require frequent package update (especially renovatebot/pre-commit-hooks), this commit sets 'schedule' to let Renovate create a branch for updates of packages on .pre-commit-config.yaml on the first day of each month, before 4 AM. As 'automergeSchedule' is not specified, automerge occurs following the default value ('at any time') as soon as Renovate creates a branch for the update.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,7 +17,8 @@
       "matchFileNames": [".pre-commit-config.yaml"],
       "enabled": true,
       "automerge": true,
-      "automergeType": "branch"
+      "automergeType": "branch",
+      "automergeSchedule": "automergeMonthly"
     }
   ],
   "customManagers": [
