--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,7 +18,7 @@
       "enabled": true,
       "automerge": true,
       "automergeType": "branch",
-      "automergeSchedule": "automergeMonthly"
+      "schedule": ["* 0-3 1 * *"]
     }
   ],
   "customManagers": [
