--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,7 +18,8 @@
       "enabled": true,
       "automerge": true,
       "automergeType": "branch",
-      "schedule": ["* 0-3 1 * *"]
+      "schedule": ["* 0-6 1 * *"],
+      "automergeSchedule": ["* 0-6 1 * *"]
     }
   ],
   "customManagers": [
