--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -21,7 +21,7 @@
 - name: Run if Traefik is enabled
   when: freescout_container_labels_traefik_enabled | bool
   block:
-    - name: Fail if required FreeScout Traefik settings not defined
+    - name: Fail if Traefik settings required for FreeScout are not defined
       ansible.builtin.fail:
         msg: >-
           You need to define a required configuration setting (`{{ item }}`).
