Rename HTTP header having a typo (`Permission-Policy`) and variables related to it
Reuse https://github.com/mother-of-all-self-hosting/ansible-role-vaultwarden/commit/ea1f75ce2a05349b804e23c5ae16817f57fd9233.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -86,7 +86,7 @@ freescout_container_labels_traefik_additional_response_headers_auto: |
     | combine ({'X-XSS-Protection': freescout_http_header_xss_protection} if freescout_http_header_xss_protection else {})
     | combine ({'X-Content-Type-Options': freescout_http_header_content_type_options} if freescout_http_header_content_type_options else {})
     | combine ({'Content-Security-Policy': freescout_http_header_content_security_policy} if freescout_http_header_content_security_policy else {})
-    | combine ({'Permission-Policy': freescout_http_header_content_permission_policy} if freescout_http_header_content_permission_policy else {})
+    | combine ({'Permissions-Policy': freescout_http_header_permissions_policy} if freescout_http_header_permissions_policy else {})
     | combine ({'Strict-Transport-Security': freescout_http_header_strict_transport_security} if freescout_http_header_strict_transport_security and freescout_container_labels_traefik_tls else {})
   }}
 freescout_container_labels_traefik_additional_response_headers_custom: {}
@@ -119,9 +119,9 @@ freescout_http_header_content_type_options: nosniff
 # See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy
 freescout_http_header_content_security_policy: frame-ancestors 'self'
 
-# Specifies the value of the `Permission-Policy` header.
-# See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Permission-Policy
-freescout_http_header_content_permission_policy: "{{ 'interest-cohort=()' if freescout_floc_optout_enabled else '' }}"
+# Specifies the value of the `Permissions-Policy` header.
+# See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Permissions-Policy
+freescout_http_header_permissions_policy: "{{ 'interest-cohort=()' if freescout_floc_optout_enabled else '' }}"
 
 # Specifies the value of the `Strict-Transport-Security` header.
 # See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Strict-Transport-Security
@@ -135,7 +135,7 @@ freescout_http_header_strict_transport_security: "max-age=31536000; includeSubDo
 # - https://amifloced.org/
 #
 # Of course, a better solution is to just stop using browsers (like Chrome), which participate in such tracking practices.
-# See: `freescout_content_permission_policy`
+# See: `freescout_http_header_permissions_policy`
 freescout_floc_optout_enabled: true
 
 # Controls if HSTS preloading is enabled
