--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,7 +19,7 @@
       "automerge": true,
       "automergeType": "branch",
       "schedule": ["* * 1 * *"],
-      "automergeSchedule": ["* * 1 * *"]
+      "automergeSchedule": ["* * 1-3 * *"]
     }
   ],
   "customManagers": [
