Update renovate.json: schedule automerge for autotag.yml and pre-commit.yml
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,7 +14,11 @@
       "versioning": "regex:^php8\\.3-(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$"
     },
     {
-      "matchFileNames": [".pre-commit-config.yaml"],
+      "matchFileNames": [
+        ".pre-commit-config.yaml",
+        ".github/workflows/autotag.yml",
+        ".github/workflows/pre-commit.yml"
+      ],
       "enabled": true,
       "automerge": true,
       "automergeType": "branch",
