Add `_auto` and `_custom` to `*_container_extra_arguments`
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -101,7 +101,9 @@ freescout_container_labels_traefik_additional_response_headers_custom: {}
 freescout_container_labels_additional_labels: ''
 
 # A list of extra arguments to pass to the container
-freescout_container_extra_arguments: []
+freescout_container_extra_arguments: "{{ freescout_container_extra_arguments_auto + freescout_container_extra_arguments_custom }}"
+freescout_container_extra_arguments_auto: []
+freescout_container_extra_arguments_custom: []
 
 # Specifies the value of the `X-XSS-Protection` header
 # Stops pages from loading when they detect reflected cross-site scripting (XSS) attacks.
