--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -103,7 +103,7 @@ freescout_container_labels_additional_labels: "{{ freescout_container_labels_add
 freescout_container_labels_additional_labels_auto: {}
 freescout_container_labels_additional_labels_custom: {}
 
-# A list of extra arguments to pass to the container
+# A list of extra arguments to pass to the container (`docker create` command)
 freescout_container_extra_arguments: "{{ freescout_container_extra_arguments_auto + freescout_container_extra_arguments_custom }}"
 freescout_container_extra_arguments_auto: []
 freescout_container_extra_arguments_custom: []
