--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -97,11 +97,11 @@ freescout_container_labels_traefik_additional_response_headers_custom: {}
 #
 # Example:
 # freescout_container_labels_additional_labels_custom: |
-#   my.label=1
-#   another.label="here"
-freescout_container_labels_additional_labels: "{{ freescout_container_labels_additional_labels_auto | combine(freescout_container_labels_additional_labels_custom) }}"
-freescout_container_labels_additional_labels_auto: {}
-freescout_container_labels_additional_labels_custom: {}
+#   - my.label=1
+#   - another.label="here"
+freescout_container_labels_additional_labels: "{{ freescout_container_labels_additional_labels_auto + freescout_container_labels_additional_labels_custom }}"
+freescout_container_labels_additional_labels_auto: []
+freescout_container_labels_additional_labels_custom: []
 
 # A list of extra arguments to pass to the container (`docker create` command)
 freescout_container_extra_arguments: "{{ freescout_container_extra_arguments_auto + freescout_container_extra_arguments_custom }}"
