--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -96,7 +96,7 @@ freescout_container_labels_traefik_additional_response_headers_custom: {}
 # To add your own custom labels, use `freescout_container_labels_additional_labels_custom`
 #
 # Example:
-# freescout_container_labels_additional_labels_custom: |
+# freescout_container_labels_additional_labels_custom:
 #   - my.label=1
 #   - another.label="here"
 freescout_container_labels_additional_labels: "{{ freescout_container_labels_additional_labels_auto + freescout_container_labels_additional_labels_custom }}"
