Update defaults/main.yml: adopt the common comments
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,10 +21,11 @@ freescout_modules_path: "{{ freescout_base_path }}/modules"
 # renovate: datasource=docker depName=tiredofit/freescout
 freescout_version: php8.3-1.17.141
 
+# The scheme used for serving FreeScout.
+freescout_scheme: https
+
 # The hostname at which FreeScout is served.
 freescout_hostname: ""
-
-freescout_scheme: https
 
 # The path at which FreeScout is served.
 # This value must either be `/` or not end with a slash (e.g. `/freescout`).
