--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
-# SPDX-FileCopyrightText: 2023 - 2024 Nikita Chernyi
-# SPDX-FileCopyrightText: 2023 - 2025 Slavi Pantaleev
+# SPDX-FileCopyrightText: 2023, 2024 Nikita Chernyi
+# SPDX-FileCopyrightText: 2023-2025 Slavi Pantaleev
 # SPDX-FileCopyrightText: 2024 Sergio Durigan Junior
 # SPDX-FileCopyrightText: 2025 MASH project contributors
-# SPDX-FileCopyrightText: 2025 Suguru Hirahara
+# SPDX-FileCopyrightText: 2025, 2026 Suguru Hirahara
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
@@ -40,6 +40,14 @@ freescout_container_image_force_pull: "{{ freescout_container_image.endswith(':l
 
 # The base container network. It will be auto-created by this role if it doesn't exist already.
 freescout_container_network: "{{ freescout_identifier }}"
+
+# Specify how the container publishes its HTTP port (as defined by `freescout_container_http_port`).
+#
+# Takes an "<ip>:<port>" or "<port>" value (e.g. "127.0.0.1:2586"), or empty string to not expose.
+freescout_container_http_host_bind_port: ""
+
+# The port number in the container
+freescout_container_http_port: 80
 
 # A list of additional container networks that the container would be connected to.
 # The role does not create these networks, so make sure they already exist.
