--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -53,6 +53,7 @@
     name: "{{ freescout_container_network }}"
     driver: bridge
     driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
+  register: freescout_network_creation_result
 
 - name: Ensure FreeScout container network is created via ansible.builtin.command
   when: devture_systemd_docker_base_container_network_creation_method == 'command'
@@ -62,9 +63,9 @@
       {% if devture_systemd_docker_base_ipv6_enabled %}--ipv6{% endif %}
       {{ devture_systemd_docker_base_container_networks_driver_options_string }}
       {{ freescout_container_network }}
-  register: network_creation_result
-  changed_when: network_creation_result.rc == 0
-  failed_when: network_creation_result.rc != 0 and 'already exists' not in network_creation_result.stderr
+  register: freescout_network_creation_result
+  changed_when: freescout_network_creation_result.rc == 0
+  failed_when: freescout_network_creation_result.rc != 0 and 'already exists' not in freescout_network_creation_result.stderr
 
 - name: Ensure FreeScout systemd service is present
   ansible.builtin.template:
