--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,6 +41,9 @@ freescout_container_image_force_pull: "{{ freescout_container_image.endswith(':l
 # The base container network. It will be auto-created by this role if it doesn't exist already.
 freescout_container_network: "{{ freescout_identifier }}"
 
+# Control if the container network is deleted on uninstalling.
+freescout_container_network_deletion_enabled: true
+
 # Specify how the container publishes its HTTP port (as defined by `freescout_container_http_port`).
 #
 # Takes an "<ip>:<port>" or "<port>" value (e.g. "127.0.0.1:2586"), or empty string to not expose.
