--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -23,6 +23,7 @@
   with_items:
     - env
     - labels
+  register: freescout_support_files_result
 
 - name: Ensure FreeScout container image is pulled via community.docker.docker_image
   when: devture_systemd_docker_base_container_image_pull_method == 'ansible-module'
@@ -31,20 +32,20 @@
     source: "{{ 'pull' if ansible_version.major > 2 or ansible_version.minor > 7 else omit }}"
     force_source: "{{ freescout_container_image_force_pull if ansible_version.major > 2 or ansible_version.minor >= 8 else omit }}"
     force: "{{ omit if ansible_version.major > 2 or ansible_version.minor >= 8 else freescout_container_image_force_pull }}"
-  register: result
+  register: freescout_container_image_pull_result
   retries: "{{ devture_playbook_help_container_retries_count }}"
   delay: "{{ devture_playbook_help_container_retries_delay }}"
-  until: result is not failed
+  until: freescout_container_image_pull_result is not failed
 
 - name: Ensure FreeScout container image is pulled via ansible.builtin.command
   when: devture_systemd_docker_base_container_image_pull_method == 'command'
   ansible.builtin.command:
     cmd: "{{ devture_systemd_docker_base_host_command_docker }} pull {{ freescout_container_image }}"
-  register: result
+  register: freescout_container_image_pull_result
   retries: "{{ devture_playbook_help_container_retries_count }}"
   delay: "{{ devture_playbook_help_container_retries_delay }}"
-  until: result is not failed
-  changed_when: "'Downloaded newer image' in result.stdout"
+  until: freescout_container_image_pull_result is not failed
+  changed_when: "'Downloaded newer image' in freescout_container_image_pull_result.stdout"
 
 - name: Ensure FreeScout container network is created via community.docker.docker_network
   when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
@@ -72,3 +73,13 @@
     src: "{{ role_path }}/templates/systemd/freescout.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ freescout_identifier }}.service"
     mode: "0644"
+  register: freescout_systemd_service_result
+
+- name: Determine whether FreeScout needs a restart
+  ansible.builtin.set_fact:
+    freescout_restart_necessary: >-
+      {{
+        freescout_support_files_result.changed | default(false)
+        or freescout_systemd_service_result.changed | default(false)
+        or freescout_container_image_pull_result.changed | default(false)
+      }}
